test/parser/while.yl
// RUN: compiler %s -ast-dump 2>&1 | filecheck %s
fn main(): unit {
    // CHECK: [[# @LINE + 1 ]]:13: error: expected expression
    while & {}
    
    // CHECK: [[# @LINE + 1 ]]:15: error: expected 'while' body
    while 0.0 ;

    while 0.0 {
        1.0;
    }
    // CHECK: WhileStmt
    // CHECK-NEXT:   NumberLiteral: '0.0'
    // CHECK-NEXT:   Block
    // CHECK-NEXT:     NumberLiteral: '1.0'
}
